# twitch_viewbot

twitch_viewbot/: README.md  pyproject.toml  requirements.txt
twitch_viewbot/bot/: browser.py  client.py  identity.py  manager.py  worker.py
twitch_viewbot/core/: config.py  logger.py  proxy.py
twitch_viewbot/scripts/: generate_identities.py  run_bot.py
twitch_viewbot/tests/: test_client.py  test_manager.py  test_proxy.py
twitch_viewbot/utils/: geoip.py  random_delay.py  user_agents.py
